# ChangeLog for app-admin/monit
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.38 2008/10/30 11:41:39 caleb Exp $

*monit-5.0_beta4 (30 Oct 2008)

  30 Oct 2008; Caleb Tennis <caleb@gentoo.org> -monit-5.0_beta3.ebuild,
  +monit-5.0_beta4.ebuild:
  version bump

*monit-5.0_beta3 (29 Aug 2008)

  29 Aug 2008; Caleb Tennis <caleb@gentoo.org> +files/monit.initd-5.0,
  +monit-5.0_beta3.ebuild:
  Bump monit

*monit-5.0_beta2 (18 Aug 2008)

  18 Aug 2008; Caleb Tennis <caleb@gentoo.org> +files/monit.initd-5.0,
  +monit-5.0_beta2.ebuild:
  version bump

  21 May 2008; nixnut <nixnut@gentoo.org> monit-4.10.1.ebuild:
  ppc stable wrt bug 222401

  20 May 2008; Raúl Porcel <armin76@gentoo.org> monit-4.10.1.ebuild:
  sparc stable wrt #222401, thanks to Friedrich Oslage for testing

  19 May 2008; Markus Meier <maekke@gentoo.org> monit-4.10.1.ebuild:
  x86 stable, bug #222401

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  10 Mar 2008; Caleb Tennis <caleb@gentoo.org> monit-4.10.1.ebuild:
  This version is now GPL-3

*monit-4.10.1 (06 Feb 2008)

  06 Feb 2008; Caleb Tennis <caleb@gentoo.org> +files/monit.initd-4.10.1,
  +monit-4.10.1.ebuild:
  version bump

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> monit-4.8.2.ebuild:
  Stable on sparc

  09 Apr 2007; Peter Weller <welp@gentoo.org> monit-4.8.2.ebuild:
  Stable on amd64 wrt bug 173819

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> monit-4.8.2.ebuild:
  Stable on ppc.

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> monit-4.8.2.ebuild:
  x86 stable

*monit-4.8.2 (06 Jan 2007)

  06 Jan 2007; MATSUU Takuto <matsuu@gentoo.org> -files/monit.initd,
  -monit-4.4.ebuild, -monit-4.5.1.ebuild, -monit-4.6.ebuild,
  +monit-4.8.2.ebuild:
  Version bumped.
  Removed old versions.
