@@ -3,7 +3,7 @@
 <pkgmetadata>
 	<herd>no-herd</herd>
 	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-		<name>Default assignee for orphaned packages</name>
+		<email>caleb@gentoo.org</email>
+		<name>Caleb Tennis</name>
 	</maintainer>
 </pkgmetadata>
