@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/monit
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.38 2008/10/30 11:41:39 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/monit/ChangeLog,v 1.39 2008/12/27 22:09:29 caleb Exp $
+
+*monit-5.0_beta6 (27 Dec 2008)
+
+  27 Dec 2008; Caleb Tennis <caleb@gentoo.org> metadata.xml,
+  -monit-5.0_beta4.ebuild, +monit-5.0_beta6.ebuild:
+  version bump
 
 *monit-5.0_beta4 (30 Oct 2008)
 
